--- a/generic.html
+++ b/generic.html
@@ -96,17 +96,23 @@
             <!-- <h2>Follow</h2> -->
             <ul class="icons">
               <li>
-                <a href="#" class="icon brands style2 fa-twitter"
+                <a
+                  href="https://twitter.com/dingerCode"
+                  class="icon brands style2 fa-twitter"
                   ><span class="label">Twitter</span></a
                 >
               </li>
               <li>
-                <a href="#" class="icon brands style2 fa-facebook-f"
+                <a
+                  href="https://www.facebook.com/anjuli.artiaga/"
+                  class="icon brands style2 fa-facebook-f"
                   ><span class="label">Facebook</span></a
                 >
               </li>
               <li>
-                <a href="#" class="icon brands style2 fa-instagram"
+                <a
+                  href="https://www.instagram.com/aartiaga11/"
+                  class="icon brands style2 fa-instagram"
                   ><span class="label">Instagram</span></a
                 >
               </li>
@@ -116,7 +122,9 @@
                 >
               </li> -->
               <li>
-                <a href="#" class="icon brands style2 fa-github"
+                <a
+                  href="https://github.com/dingerCode"
+                  class="icon brands style2 fa-github"
                   ><span class="label">GitHub</span></a
                 >
               </li>
@@ -126,12 +134,14 @@
                 >
               </li> -->
               <li>
-                <a href="#" class="icon solid style2 fa-phone"
+                <a href="tel:+18175848986" class="icon solid style2 fa-phone"
                   ><span class="label">Phone</span></a
                 >
               </li>
               <li>
-                <a href="#" class="icon solid style2 fa-envelope"
+                <a
+                  href="mailto:anjuli@dingerdoodles.com"
+                  class="icon solid style2 fa-envelope"
                   ><span class="label">Email</span></a
                 >
               </li>
