--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <section class="tiles">
             <article class="style1">
               <span class="image">
-                <img src="images/circleRainbowShield.gif" alt="" />
+                <img src="images/prideShield.gif" alt="" />
               </span>
               <a href="generic.html">
                 <!-- <h2>Circle Rainbow Shield</h2> -->
@@ -70,7 +70,7 @@
             </article>
             <article class="style2">
               <span class="image">
-                <img src="images/circleRainbowShield.gif" alt="" />
+                <img src="images/rainbowShield.gif" alt="" />
               </span>
               <a href="generic.html">
                 <!-- <h2>Lorem</h2> -->
@@ -79,7 +79,7 @@
             </article>
             <article class="style3">
               <span class="image">
-                <img src="images/circleRainbowShield.gif" alt="" />
+                <img src="images/christShield.gif" alt="" />
               </span>
               <a href="generic.html">
                 <!-- <h2>Feugiat</h2> -->
@@ -88,7 +88,7 @@
             </article>
             <article class="style4">
               <span class="image">
-                <img src="images/circleRainbowShield.gif" alt="" />
+                <img src="" alt="" />
               </span>
               <a href="generic.html">
                 <!-- <h2>Tempus</h2> -->
@@ -97,7 +97,7 @@
             </article>
             <article class="style5">
               <span class="image">
-                <img src="images/circleRainbowShield.gif" alt="" />
+                <img src="" alt="" />
               </span>
               <a href="generic.html">
                 <!-- <h2>Aliquam</h2> -->
@@ -108,7 +108,7 @@
             </article>
             <article class="style6">
               <span class="image">
-                <img src="images/circleRainbowShield.gif" alt="" />
+                <img src="" alt="" />
               </span>
               <a href="generic.html">
                 <!-- <h2>Veroeros</h2> -->
@@ -243,17 +243,23 @@
             <!-- <h2>Follow</h2> -->
             <ul class="icons">
               <li>
-                <a href="#" class="icon brands style2 fa-twitter"
+                <a
+                  href="https://twitter.com/dingerCode"
+                  class="icon brands style2 fa-twitter"
                   ><span class="label">Twitter</span></a
                 >
               </li>
               <li>
-                <a href="#" class="icon brands style2 fa-facebook-f"
+                <a
+                  href="https://www.facebook.com/anjuli.artiaga/"
+                  class="icon brands style2 fa-facebook-f"
                   ><span class="label">Facebook</span></a
                 >
               </li>
               <li>
-                <a href="#" class="icon brands style2 fa-instagram"
+                <a
+                  href="https://www.instagram.com/aartiaga11/"
+                  class="icon brands style2 fa-instagram"
                   ><span class="label">Instagram</span></a
                 >
               </li>
@@ -263,7 +269,9 @@
                 >
               </li> -->
               <li>
-                <a href="#" class="icon brands style2 fa-github"
+                <a
+                  href="https://github.com/dingerCode"
+                  class="icon brands style2 fa-github"
                   ><span class="label">GitHub</span></a
                 >
               </li>
@@ -273,12 +281,14 @@
                 >
               </li> -->
               <li>
-                <a href="#" class="icon solid style2 fa-phone"
+                <a href="tel:+18175848986" class="icon solid style2 fa-phone"
                   ><span class="label">Phone</span></a
                 >
               </li>
               <li>
-                <a href="#" class="icon solid style2 fa-envelope"
+                <a
+                  href="mailto:anjuli@dingerdoodles.com"
+                  class="icon solid style2 fa-envelope"
                   ><span class="label">Email</span></a
                 >
               </li>
